# uplift-your-banking

./: .yamllint.yaml  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cicd.yaml
examples/: all_tag_account_analysis.py  budget_tracking.py  multi_report_workflow.py  untagged_withdrawals.py
inputs/: README.md  example-budget.csv  example-budget.json
src/exporters/: outputs.py
src/helpers/: up_toolkit.py
src/ingestors/: budget_ingestors.py
src/shared/: settings.py
src/shared/logging/: logger.py
src/transformers/: data_transformers.py  time_transformers.py
