# Pyproject TOML configuration file

# Bandit settings
# Doco: https://bandit.readthedocs.io/en/latest/config.html?highlight=pyproject.toml#scanning-behavior
# NOTE: Excluding ALL sub-dirs for now
[tool.bandit]
exclude_dirs = ["venv"]
# Skip all assertion checks in the src/tests/ folder.
# Asserts are legitimely used in pytest tests
[tool.bandit.assert_used]
skips = ["tests"]

# Mypy settings:
# Doco: https://mypy.readthedocs.io/en/stable/config_file.html#the-mypy-configuration-file
[tool.mypy]
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
strict = true
# Ignore all files within the repo
exclude = "(venv)"

# Ruff line settings
[tool.ruff]
line-length = 120


# Ruff linting settings
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pydocstyle - Google convention
    "D"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# Poetry settings

[tool.poetry]
name = "up-statement-cruncher"
version = "0.0.1"
description = "Analyse Up Bank Statements"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
up-bank-api = "^1.1.0"
pandas = "^2.2.2"
xlsxwriter = "^3.2.0"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
mypy = "^1.9.0"
yamllint = "^1.0.0"
bandit = "^1.7.8"
types-python-dateutil = "^2.9.0.20240316"
types-pytz = "^2024.1.0.20240417"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
